# CSC10003-OOP-Waste-management-and-separation-system

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md
report/: main.tex
report/content/: III-Part3.tex  title.tex
src/: README.md  main.cpp
src/ai/: CMakeLists.txt  main.cpp  ollama.cpp  ollama.hpp
src/api/: ai_controller.cpp  ai_controller.h  auth_controller.cpp  auth_controller.h  region_controller.cpp  region_controller.h  report_controller.cpp  report_controller.h  route_controller.cpp  route_controller.h  router.cpp  router.h  service_controller.cpp  service_controller.h  user_controller.cpp  user_controller.h
src/bus/: AuthService.cpp  AuthService.h  FeedbackBUS.cpp  FeedbackBUS.h  FeedbackService.cpp  FeedbackService.h  ManagerBUS.cpp  ManagerBUS.h  OperatorService.cpp  OperatorService.h  PathFinder.cpp  PathFinder.h  ProfileBUS.cpp  ProfileBUS.h  ProfileService.cpp  ProfileService.h  ReportService.cpp  ReportService.h  RoutePlanner.cpp  RoutePlanner.h  SettingsService.cpp  SettingsService.h  TeamService.cpp  TeamService.h  UserBUS.cpp  UserBUS.h  UserService.cpp  UserService.h  Utils.cpp  Utils.h  WorkerBUS.cpp  WorkerBUS.h  auth_service.cpp  auth_service.h  createRoute.cpp  createRoute.h  report_service.cpp  report_service.h  route_service.cpp  route_service.h  (+8 more)
src/core/: server.cpp  server.h
src/dal/: CityMapDAL.cpp  CityMapDAL.h  Database.cpp  Database.h  FeedbackDAL.cpp  FeedbackDAL.h  ManagerDAL.cpp  ManagerDAL.h  ProfileDAL.cpp  ProfileDAL.h  ReportDAL.cpp  ReportDAL.h  SettingDAL.cpp  SettingDAL.h  SettingsDAL.cpp  SettingsDAL.h  TeamDAL.cpp  TeamDAL.h  UserDAL.cpp  UserDAL.h  WorkerDAL.cpp  WorkerDAL.h
src/db/: connect.cpp  connect.h  path_repo.cpp  path_repo.h  region_repo.cpp  region_repo.h  report_repo.cpp  report_repo.h  service_repo.cpp  service_repo.h  user_repo.cpp  user_repo.h
src/dto/: AccountDTO.cpp  AccountDTO.h  BaseDTO.h  CityMap.cpp  CityMap.h  FeedbackDTO.cpp  FeedbackDTO.h  ManagerDTO.cpp  ManagerDTO.h  OperatorDto.cpp  OperatorDto.h  ProfileDTO.cpp  ProfileDTO.h  SettingDTO.cpp  SettingDTO.h  UserDTO.cpp  UserDTO.h  UserDto.cpp  UserDto.h  WorkerDTO.cpp  WorkerDTO.h  base.h
src/dto/account/: AccountDTO.h  AdminDTO.h  UserDTO.h  WorkerDTO.h
src/dto/area/: AreaDTO.h
src/dto/feedback/: FeedbackDTO.cpp  FeedbackDTO.h
src/dto/profile/: ProfileDTO.cpp  ProfileDTO.h
src/dto/report/: ReportRequestDTO.h  TeamPerformanceDTO.h  TrashVolumeDTO.h
src/dto/settings/: EmailConfigDTO.h  NotificationConfigDTO.h  ProfileDTO.h  RegionDTO.h  SettingDTO.h  TrashTypeDTO.h  WasteTypeDTO.h
src/dto/team/: MemberDTO.h  TaskDTO.h  TeamDTO.h  WorkHistoryDTO.h  WorkerDTO.h
src/dto/user/: UserDTO.cpp  UserDTO.h
src/mocktest/: CityMap.txt  requiredNodes.txt  test_graph.cpp
src/ui/: README.md  bql_menu.cpp  bql_menu.h  common_renderer.h  pubspec.yaml  report_menu.cpp  report_menu.h  settings_menu.cpp  settings_menu.h  team_menu.cpp  team_menu.h
src/ui/lib/: main.dart
src/ui/lib/components/auth_screen/: login_panel.dart  signin_panel.dart  title_field.dart
src/ui/lib/components/chat/: ai_chat_bubble.dart
src/ui/lib/components/global/: background_pattern.dart
src/ui/lib/components/home_screen/: home_layout.dart
src/ui/lib/components/home_screen/manager/: customer_form.dart  customer_panel.dart  reports_panel.dart  task_panel.dart  worker_panel.dart
src/ui/lib/components/home_screen/shared/: home_layout.dart  settings_panel.dart
src/ui/lib/components/home_screen/user/: feedback_panel.dart  service_registration_panel.dart
src/ui/lib/components/home_screen/worker/: task_panel.dart  team_panel.dart
src/ui/lib/components/model/: customer_model.dart  menu_item_model.dart  report_model.dart  route_model.dart  service_request_model.dart  worker_model.dart
src/ui/lib/core/constants/: app_constants.dart
src/ui/lib/features/auth/screens/: auth_screen.dart
src/ui/lib/features/auth/widgets/: login_panel.dart  signin_panel.dart
src/ui/lib/features/manager/screens/: manager_dashboard.dart
src/ui/lib/features/manager/widgets/: customer_form.dart  customer_panel.dart  manage_panel.dart  manager_home_widget.dart  request_panel.dart  task_panel.dart
src/ui/lib/features/user/screens/: user_dashboard.dart
src/ui/lib/features/user/widgets/: collection_schedule_panel.dart  user_home_widget.dart  user_profile_panel.dart
src/ui/lib/features/worker/screens/: worker_dashboard.dart
src/ui/lib/features/worker/widgets/: chekin_panel.dart  task_panel.dart  worker_history_panel.dart  worker_profile_panel.dart  worker_route_panel.dart
src/ui/lib/screens/: auth_screen.dart  home_screen.dart  load_screen.dart  manager_screen.dart  user_screen.dart  worker_screen.dart
src/ui/lib/services/: ai_assistant_api.dart  auth_api.dart  customer_api.dart  reports_api.dart  routes_api.dart  service_request_api.dart  settings_api.dart  user_management_api.dart  worker_api.dart
src/ui/lib/shared/layout/: dashboard_layout.dart
src/ui/lib/utils/: user_data_utils.dart
src/ui/lib/widgets/: background_pattern.dart
src/ui/test/: widget_test.dart
src/ui/windows/: CMakeLists.txt
src/ui/windows/runner/: Runner.rc  main.cpp
src/utils/: graphUtils.cpp  graphUtils.h  ultis.cpp  ultis.h
